--- a/style.css
+++ b/style.css
@@ -17,15 +17,11 @@ html {
     color: #fff;
     background: #000;
     font-family: "Poppins", verdana, sans-serif;
-    font-size: 14px;
-}
-@media (min-width: 1000px) {
-    html {
     font-size: 16px;
-    }
 }
 
 button {
+    min-height: 45px;
     flex-grow: 1;
     margin: 10px;
     padding: 10px;
@@ -87,12 +83,12 @@ input:focus::placeholder {
         background: #222;
         border-radius: 10px;
         box-shadow: 0 0 30px #222;
+        max-width: 95%;
         min-width: 60%;
     }
 
 /* Header */
 .header {
-    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -101,8 +97,8 @@ input:focus::placeholder {
     border-radius: 10px 10px 0px 0px;
     text-align: center;
     font-size: 28px;
-    padding: 30px 20px;
-}
+    padding: 15px;
+    }
 
 /* Players */
 .players {
@@ -110,12 +106,12 @@ input:focus::placeholder {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    /* width: 100%; */
     }
     .players_form {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        width: 100%;
+        /* width: 100%; */
         padding: 10px;
     }
     @media (max-width: 1000px) {
@@ -186,14 +182,16 @@ input:focus::placeholder {
         display: flex;
         justify-content: center;
         align-items: center;
+        line-height: 1.5rem;
         background-color: rgba(15, 15, 15, 0.9);
         backdrop-filter: blur(5px);
         padding: 20px;
         border-radius: 10px;
         box-shadow: 0px 0px 30px #246;
         text-align: center;
-        min-width: 390px;
-        min-height: 100px;
+        min-width: 300px;
+        max-width: 95vw;
+        min-height: 150px;
     }
     .modal_close {
         position: absolute;
@@ -226,7 +224,7 @@ input:focus::placeholder {
         padding: 20px;
         border-radius: 10px;
         text-align: center;
-        min-width: 390px;
+        min-width: 330px;
         max-width: 95vw;
         min-height: 120px;
         width: 50%;
@@ -296,7 +294,7 @@ input:focus::placeholder {
     }
     .edit_others {
         display: grid;
-        grid-template-columns: 230px 90px;
+        grid-template-columns: 220px 50px;
         grid-template-rows: repeat(3, 50px);
         justify-content: start;
         align-items: center;
