--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ button {
     min-height: 45px;
     min-width: 45px;
     padding: 10px;
-    margin: 5px;
     border: 1px solid #666;
     border-radius: 5px;
     text-align: center;
@@ -43,7 +42,6 @@ button:hover {
 select,
 input {
     flex-grow: 1;
-    margin: 5px;
     padding: 10px;
     border: 1px solid #666;
     border-radius: 5px;
@@ -78,15 +76,21 @@ input:focus::placeholder {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    max-width: 100vw;
+    min-width: 100vw;
     padding: 10px;
     }
     .container_app {
         background: #222;
         border-radius: 10px;
         box-shadow: 0 0 30px #222;
-        max-width: 100vw;
-        min-width: 60%;
+        max-width: calc(100% - 10px);
+        min-width: 300px;
+        width: 60%;
+    }
+    @media (max-width: 1200px) {
+        .container_app {
+            width: calc(100% - 10px);
+        }
     }
 
 /* Header */
@@ -112,12 +116,12 @@ input:focus::placeholder {
     }
     .players_form {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(190px,1fr));
         width: 100%;
         padding: 20px;
-        gap: 10px;
+        gap: 20px;
     }
-    @media (max-width: 1000px) {
+    @media (max-width: 690px) {
         .players_form {
             grid-template-columns: 100%;
         }
@@ -126,25 +130,24 @@ input:focus::placeholder {
         display: flex;
     }
     .players_list {
+        padding: 0 20px 20px;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(180px,1fr));
+        grid-template-columns: repeat(auto-fit, minmax(190px,1fr));
         justify-content: center;
-        padding: 0 20px;
-        gap: 0 20px;
+        gap: 20px;
         width: 100%;
     }
 
 /* Player */
 .player {
-    margin: 5px;
     padding: 30px 20px;
     border-radius: 5px;
     text-align: center;
-    min-width: 100px;
+    min-width: 190px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
     gap:30px
     }
     .player_icons {
@@ -158,12 +161,15 @@ input:focus::placeholder {
     }
     .player_row {
         display: grid;
-        grid-template-columns: 60px 60px 20px;
+        grid-template-columns: 60px 60px 30px;
         text-align: left;
     }
     .player_score {
         text-align: right;
         padding-right: 20px;
+    }
+    .player_edit {
+        text-align: center;
     }
     .player_sum {
         font-weight: bold;
@@ -230,7 +236,7 @@ input:focus::placeholder {
         text-align: center;
         min-width: 330px;
         min-height: 120px;
-        width: 50%;
+        width: 40%;
         } 
         .edit_content-others {
             max-width: 400px;
@@ -243,6 +249,7 @@ input:focus::placeholder {
     }
     .edit_button {
         width: 40px;
+        margin: 5px;
         padding: 10px 15px;
         flex-grow: 0;
         flex-shrink: 0;
@@ -267,11 +274,12 @@ input:focus::placeholder {
         font-weight: bold;
     }
     .edit_list {
+        /* background-color: blue; */
         display: flex;
-        justify-content: left;
+        justify-content: center;
         flex-wrap: wrap;
-        min-width: 95%;
-        gap: 19px;
+        width: 100%;
+        gap: 18px;
     }
     .edit_info {
         width: 70px;
@@ -282,6 +290,7 @@ input:focus::placeholder {
         gap: 10px;
     }
     .edit_item {
+        /* background-color: green; */
         width: 25px;
         height: 70px;
         display: flex;
@@ -290,6 +299,7 @@ input:focus::placeholder {
         gap: 10px;
     }
     .edit_add {
+        margin: 5px;
         width: 150px;
     }
     .edit_red {
