--- a/style.css
+++ b/style.css
@@ -48,14 +48,12 @@ input {
     transition: background-color 0.5s;
     color: #000;
     }
+    select:focus,
     input:focus {
         background: #ace;
     }
     input::placeholder {
         color: #888;
-    }
-    input:focus::placeholder {
-        visibility: hidden;
     }
 
 /* Font awesome */
@@ -93,6 +91,7 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     font-weight: bold;
     padding: 15px;
     border-radius: 10px 10px 0px 0px;
@@ -100,13 +99,17 @@ input {
     text-align: center;
     font-size: 28px;
 }
+.header_start {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
 
 /* Form */
 .form {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(190px,1fr));
     padding: 20px;
-    margin-bottom: 10px;
     gap: 20px;
     }
     @media (max-width: 690px) {
@@ -126,7 +129,7 @@ input {
 .main {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    padding: 0 20px 20px;
+    padding: 10px 20px 20px;
     gap: 20px;
 }
 
