--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ input {
     background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     top: 0;
     left: 0;
     }
